content/docs/theory-analysis/istio-gateway-api/manifests/ingress-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server-ingress
  namespace: server-namespace
spec:
  parentRefs:
  - name: gateway-ingress
    namespace: istio-system
  hostnames:
  - "server.ssup2.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: server-v1
      port: 8080
      weight: 90
    - name: server-v2
      port: 8080
      weight: 10
